fix: `Price` gap

--- a/packages/ui/src/components/molecules/CartItem/styles.scss
+++ b/packages/ui/src/components/molecules/CartItem/styles.scss
@@ -30,6 +30,7 @@
   --fs-cart-item-skus-row-gap             : var(--fs-spacing-0);
 
   // Prices
+  --fs-cart-item-price-gap                : var(--fs-spacing-1);
   --fs-cart-item-listing-price-text-size  : var(--fs-text-size-legend);
 
 
@@ -97,6 +98,7 @@
   [data-fs-cart-item-prices] {
     display: flex;
     align-items: baseline;
+    column-gap: var(--fs-cart-item-price-gap);
     [data-fs-price-variant="listing"] { font-size: var(--fs-cart-item-listing-price-text-size); }
   }
 
